// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IgaSodPolicyOps createPolicy() 1: Create policy 1`] = `
{
  "active": true,
  "description": "this is a test policy",
  "id": Any<String>,
  "name": "frodo-test-create",
  "policyOwner": {
    "givenName": "Frodo",
    "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
    "mail": "test@mail.com",
    "sn": "Test",
    "userName": "frodo-test",
  },
  "policyRuleIds": [
    "df95d487-a251-458d-8299-14f2b131264c",
  ],
  "policyRuleNames": [
    "test rule",
  ],
  "scheduleId": Any<String>,
}
`;

exports[`IgaSodPolicyOps createPolicyExportTemplate() 1: Create Policy Export Template 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
}
`;

exports[`IgaSodPolicyOps deletePolicy() 1: Delete existing policy by id 1`] = `
{
  "active": true,
  "description": "this is a test policy",
  "id": Any<String>,
  "metadata": {
    "createdDate": "2026-06-05T20:35:32.028579169Z",
    "modifiedDate": "2026-06-05T20:35:32.028581532Z",
  },
  "name": "frodo-test-delete-by-id",
  "policyOwner": {
    "givenName": "Frodo",
    "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
    "mail": "test@mail.com",
    "sn": "Test",
    "userName": "frodo-test",
  },
  "policyRuleIds": [
    "df95d487-a251-458d-8299-14f2b131264c",
  ],
  "policyRuleNames": [
    "test rule",
  ],
  "scheduleId": Any<String>,
}
`;

exports[`IgaSodPolicyOps deletePolicyByName() 1: Delete existing policy by name 1`] = `
{
  "active": true,
  "description": "this is a test policy",
  "id": Any<String>,
  "metadata": {
    "createdDate": "2026-06-05T20:35:34.197624528Z",
    "modifiedDate": "2026-06-05T20:35:34.197626174Z",
  },
  "name": "frodo-test-delete-by-name",
  "policyOwner": {
    "givenName": "Frodo",
    "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
    "mail": "test@mail.com",
    "sn": "Test",
    "userName": "frodo-test",
  },
  "policyRuleIds": [
    "df95d487-a251-458d-8299-14f2b131264c",
  ],
  "policyRuleNames": [
    "test rule",
  ],
  "scheduleId": Any<String>,
}
`;

exports[`IgaSodPolicyOps exportPolicies() 1: Export existing policies 1`] = `
{
  "meta": Any<Object>,
  "policy": {
    "frodo-test-create": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:23.971703915Z",
        "modifiedDate": "2026-06-05T20:35:23.971707756Z",
      },
      "name": "frodo-test-create",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
    "frodo-test-delete-by-id": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:32.028579169Z",
        "modifiedDate": "2026-06-05T20:35:32.028581532Z",
      },
      "name": "frodo-test-delete-by-id",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
    "frodo-test-delete-by-name": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:34.197624528Z",
        "modifiedDate": "2026-06-05T20:35:34.197626174Z",
      },
      "name": "frodo-test-delete-by-name",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
    "frodo-test-existing": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:26.207545583Z",
        "modifiedDate": "2026-06-05T20:35:26.207547362Z",
      },
      "name": "frodo-test-existing",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
  },
}
`;

exports[`IgaSodPolicyOps exportPoliciesByName() 1: Export existing policy by name 1`] = `
{
  "meta": Any<Object>,
  "policy": {
    "frodo-test-existing": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:26.207545583Z",
        "modifiedDate": "2026-06-05T20:35:26.207547362Z",
      },
      "name": "frodo-test-existing",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
  },
}
`;

exports[`IgaSodPolicyOps exportPolicy() 1: Export existing policy by id 1`] = `
{
  "meta": Any<Object>,
  "policy": {
    "frodo-test-existing": {
      "active": true,
      "description": "this is a test policy",
      "id": "[id]",
      "metadata": {
        "createdDate": "2026-06-05T20:35:26.207545583Z",
        "modifiedDate": "2026-06-05T20:35:26.207547362Z",
      },
      "name": "frodo-test-existing",
      "policyOwner": {
        "givenName": "Frodo",
        "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
        "mail": "test@mail.com",
        "sn": "Test",
        "userName": "frodo-test",
      },
      "policyRuleIds": [
        "df95d487-a251-458d-8299-14f2b131264c",
      ],
      "policyRuleNames": [
        "test rule",
      ],
      "scheduleId": "[scheduleId]",
    },
  },
}
`;

exports[`IgaSodPolicyOps readPolicies() 1: Read existing policies 1`] = `
[
  {
    "active": true,
    "description": "this is a test policy",
    "id": "[id]",
    "metadata": {
      "createdDate": "2026-06-05T20:35:23.971703915Z",
      "modifiedDate": "2026-06-05T20:35:23.971707756Z",
    },
    "name": "frodo-test-create",
    "policyOwner": {
      "givenName": "Frodo",
      "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
      "mail": "test@mail.com",
      "sn": "Test",
      "userName": "frodo-test",
    },
    "policyRuleIds": [
      "df95d487-a251-458d-8299-14f2b131264c",
    ],
    "policyRuleNames": [
      "test rule",
    ],
    "scheduleId": "[scheduleId]",
  },
  {
    "active": true,
    "description": "this is a test policy",
    "id": "[id]",
    "metadata": {
      "createdDate": "2026-06-05T20:35:32.028579169Z",
      "modifiedDate": "2026-06-05T20:35:32.028581532Z",
    },
    "name": "frodo-test-delete-by-id",
    "policyOwner": {
      "givenName": "Frodo",
      "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
      "mail": "test@mail.com",
      "sn": "Test",
      "userName": "frodo-test",
    },
    "policyRuleIds": [
      "df95d487-a251-458d-8299-14f2b131264c",
    ],
    "policyRuleNames": [
      "test rule",
    ],
    "scheduleId": "[scheduleId]",
  },
  {
    "active": true,
    "description": "this is a test policy",
    "id": "[id]",
    "metadata": {
      "createdDate": "2026-06-05T20:35:34.197624528Z",
      "modifiedDate": "2026-06-05T20:35:34.197626174Z",
    },
    "name": "frodo-test-delete-by-name",
    "policyOwner": {
      "givenName": "Frodo",
      "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
      "mail": "test@mail.com",
      "sn": "Test",
      "userName": "frodo-test",
    },
    "policyRuleIds": [
      "df95d487-a251-458d-8299-14f2b131264c",
    ],
    "policyRuleNames": [
      "test rule",
    ],
    "scheduleId": "[scheduleId]",
  },
  {
    "active": true,
    "description": "this is a test policy",
    "id": "[id]",
    "metadata": {
      "createdDate": "2026-06-05T20:35:26.207545583Z",
      "modifiedDate": "2026-06-05T20:35:26.207547362Z",
    },
    "name": "frodo-test-existing",
    "policyOwner": {
      "givenName": "Frodo",
      "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
      "mail": "test@mail.com",
      "sn": "Test",
      "userName": "frodo-test",
    },
    "policyRuleIds": [
      "df95d487-a251-458d-8299-14f2b131264c",
    ],
    "policyRuleNames": [
      "test rule",
    ],
    "scheduleId": "[scheduleId]",
  },
]
`;

exports[`IgaSodPolicyOps readPolicy() 1: Read existing policy by id 1`] = `
{
  "active": true,
  "description": "this is a test policy",
  "id": Any<String>,
  "metadata": {
    "createdDate": "2026-06-05T20:35:26.207545583Z",
    "modifiedDate": "2026-06-05T20:35:26.207547362Z",
  },
  "name": "frodo-test-existing",
  "policyOwner": {
    "givenName": "Frodo",
    "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
    "mail": "test@mail.com",
    "sn": "Test",
    "userName": "frodo-test",
  },
  "policyRuleIds": [
    "df95d487-a251-458d-8299-14f2b131264c",
  ],
  "policyRuleNames": [
    "test rule",
  ],
  "scheduleId": Any<String>,
}
`;

exports[`IgaSodPolicyOps readPolicyByName() 1: Read existing policy by name 1`] = `
{
  "active": true,
  "description": "this is a test policy",
  "id": Any<String>,
  "metadata": {
    "createdDate": "2026-06-05T20:35:26.207545583Z",
    "modifiedDate": "2026-06-05T20:35:26.207547362Z",
  },
  "name": "frodo-test-existing",
  "policyOwner": {
    "givenName": "Frodo",
    "id": "managed/user/0ece145b-1467-4cac-b472-f8f34dfaeef3",
    "mail": "test@mail.com",
    "sn": "Test",
    "userName": "frodo-test",
  },
  "policyRuleIds": [
    "df95d487-a251-458d-8299-14f2b131264c",
  ],
  "policyRuleNames": [
    "test rule",
  ],
  "scheduleId": Any<String>,
}
`;
